[package]
name = "switch-router"
description = "An alternate version of the yew RouteService, which aims to provide a more type safe API for setting routes, and some other improvements."
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-events = "0.1.1"
web-sys = {version = "0.3", features = ["History", "Location", "PopStateEvent", "Window"]}
wasm-bindgen = "0.2"
yew = { version = "0.17", optional = true }

[features]
default = []