[package]
name = "switch-router"
description = "An alternate version of the yew RouteService, which aims to provide a more type safe API for setting routes, and some other improvements."
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-events = { version = "0.1", optional = true }
web-sys = {version = "0.3", features = ["History", "Location", "PopStateEvent", "Window"], optional = true}
wasm-bindgen = { version = "0.2", optional = true }
yew = { version = "0.17", optional = true }

[features]
default = []
web = ["gloo-events", "web-sys", "wasm-bindgen"]